Fixed opacity to fix aXe contrast errors

--- a/app/src/pages/styles/home.scss
+++ b/app/src/pages/styles/home.scss
@@ -444,7 +444,7 @@ body {
   font-family: 'Montserrat', sans-serif, Arial;
   font-size: 0.75rem;
   font-weight: 600;
-  color: rgba(255, 255, 255, 0.55);
+  color: rgba(255, 255, 255, 0.85);
   text-transform: uppercase;
   letter-spacing: 0.1em;
   margin: 0.25rem 0 0.5rem;
